Revert "Contact us using forms functionality"
This reverts commit a825e732eb0ca22456828f2dd49db6de25b311c0.

--- a/PBSS/positivebehaviour/templates/positivebehaviour/base.html
+++ b/PBSS/positivebehaviour/templates/positivebehaviour/base.html
@@ -73,7 +73,7 @@
 
                         <li>
 
-                        <a class="page-scroll" href="{% url 'contact' %}">Contact us</a>
+                        <a class="page-scroll" href="#contact">Contact us</a>
                     </li>
                 </ul>
             </div>
