--- a/PBSS/positivebehaviour/templates/positivebehaviour/index.html
+++ b/PBSS/positivebehaviour/templates/positivebehaviour/index.html
@@ -222,9 +222,7 @@
                         </div>
                         <div class="col-md-8">
                             <div id="contact-form">
-                                <form name="form1" method="post">
-                                            {% csrf_token %}
-                                            {{form.as_p}}
+                                <form name="form1" method="post" action="contact.php">
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="form-group">
@@ -260,7 +258,8 @@
                     </div>
                 </div>
             </section>
-    </div>
+
+        </div>
 
 
         <section class="box-content box-4 box-style">
@@ -430,7 +429,6 @@
                         <a href="#0" class="close-btn">Close</a>
                     </div> <!-- cd-testimonials-all -->
                 </div>
-
             </section>
 
 {% endblock content %}
