--- a/PBSS/positivebehaviour/templates/positivebehaviour/base.html
+++ b/PBSS/positivebehaviour/templates/positivebehaviour/base.html
@@ -72,8 +72,7 @@
                          {% endif %}
 
                         <li>
-
-                        <a class="page-scroll" href="#contact">Contact us</a>
+                            <a class="page-scroll" href="{% url 'contact' %}">Contact us</a>
                     </li>
                 </ul>
             </div>
