--- a/PBSS/positivebehaviour/templates/positivebehaviour/base.html
+++ b/PBSS/positivebehaviour/templates/positivebehaviour/base.html
@@ -49,7 +49,13 @@
                     <li>
                         <a class="page-scroll" href="#about">About us</a>
                     </li>
-                      <li>
+                    <li>
+                        <a class="page-scroll" href="#services">Services</a>
+                    </li>
+					<li>
+                        <a class="page-scroll" href="#fbaform">FBA Form</a>
+                    </li>
+                    <li>
                          {% if user.is_authenticated %}
                              <li>
                                  <a class="page-scroll" href="{% url 'profile' %}">Profile</a>
@@ -64,13 +70,6 @@
                             <a class="page-scroll" href="#portal">Signup</a>
                         </li>
                          {% endif %}
-
-                    <li>
-                        <a class="page-scroll" href="#services">Services</a>
-                    </li>
-					<li>
-                        <a class="page-scroll" href="#fbaform">FBA Form</a>
-                    </li>
 
                         <li>
                             <a class="page-scroll" href="{% url 'contact' %}">Contact us</a>
@@ -117,13 +116,17 @@
 						<div class=""><h6>Subscribe us</h6></div>
 						<div class="content">
 							<p></p>
-							<div class="subscribe-form" >
-								<form method="get" action="/search" id="subscribe">
-									<div class="form-group">
-										<input type="text" class="form-control input-lg" name="subscribe" placeholder="Enter your email address...  " required="required" />
-									</div>
-									<button type="submit" name="Submit" class="btn btn-4 btn-block">Subscribe</button>
-								</form>
+							<div class="subscribe-form">
+								 <form method="post">{% csrf_token %}
+                <div class = "form-group" style="display: block;">
+                    {{ form }}<br>
+                    <span class="input-group-btn">
+                       <button type="submit" name="Submit" class="btn btn-4 btn-block" style="width: 100%; margin-top: 4%;">Subscribe</button>
+                    </span>
+                </div>
+            </form>
+							<!--
+							-->
 							</div>
 						</div>
 					</div>
