--- a/PBSS/users/templates/users/profile.html
+++ b/PBSS/users/templates/users/profile.html
@@ -1,7 +1,7 @@
 {%  extends "users/dashboardbase.html" %}
+{% load crispy_forms_tags %}
 {% block content %}
 {% load static %}
-{% load crispy_forms_tags %}
 
  <!-- i have to add nav bar which will be redirected to this page.-->
 <!--    <div class="profile-form">-->
@@ -116,9 +116,38 @@
       </div>
         <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+    </div>
+    </div>
+               <div class="profile-form">
+
+
+    <div class="content-section">
+        <form method="POST">
+            {% csrf_token %}
+            <fieldset class="form-group">
+                <legend class="border-bottom mb-4">Join Today</legend>
+                {{ form|crispy }}
+            </fieldset>
+            <div class="form-group">
+                <button class="btn btn-outline-info" type="submit">Sign Up</button>
+            </div>
+        </form>
+        <div class="border-top pt-3">
+            <small class="text-muted">
+                Already Have An Account? <a class="ml-2" href="#">Sign In</a>
+            </small>
+        </div>
+    </div>
+
+    If you already have an account <a href="/login" target="blank"><strong>login</strong></a> instead.
+
+
+    </div>
+    </div></main>
         </div>
         </div>
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+
                 </div>
         </div>
             <div class="row">
