--- a/PBSS/users/templates/users/dashboardbase.html
+++ b/PBSS/users/templates/users/dashboardbase.html
@@ -29,10 +29,14 @@
 
 <body>
 
-
     {% block content %}{% endblock content %}
 
 
+                </div>
+                </fieldset></form>
+                </div>
+                        </div>
+					</div>
 
 <!-- Js -->
 	    <script src= "{% static 'js/modernizr.js' %}"></script>
