--- a/PBSS/positivebehaviour/templates/positivebehaviour/base.html
+++ b/PBSS/positivebehaviour/templates/positivebehaviour/base.html
@@ -57,6 +57,9 @@
                     </li>
                     <li>
                          {% if user.is_authenticated %}
+                    <li>
+                                 <a class="page-scroll" href="{% url 'client' %}">Client</a>
+                             </li>
                              <li>
                                  <a class="page-scroll" href="{% url 'profile' %}">Profile</a>
                              </li>
