--- a/PBSS/freefbaform/templates/freefbaform/fbabase.html
+++ b/PBSS/freefbaform/templates/freefbaform/fbabase.html
@@ -54,12 +54,12 @@
     <!-- Footer -->
 	<footer id="Footer">
 		<div class="wrap-footer">
-			<div class="container-fluid">
+			<div class="container">
 				<div class="row">
 					<div class="col-md-4 col-footer footer-1">
 						<div class=""><h6>PBSS</h6></div>
 						<div class="content">
-							<p>A PBS plan will tell the people what needs to be done proactively to prevent the challenging behaviour. Proactive strategy will improve the quality of life by supporting throughout the process. Our web application will aid all the people who want to proactively prevent a challenging behaviour by submitting a Functional Behaviour Assessment (FBA) form which will be analysed by the team leader and strategies will be developed to counter the behaviour.  </p>
+							<p>A PBS plan will tell the people what needs to be done proactively to prevent the challenging behaviour. Proactive strategy will improve the quality of life by supporting throughout the process.</p>
                         </div>
 					</div>
 
@@ -95,10 +95,10 @@
 			</div>
 		</div>
 		<div class="copyright">
-			<div class="container-fluid">
+			<div class="container">
 				<div class="row">
 					<div class="col-md-4">
-						<p>Copyright &copy; PBSS - Designed by Team 03<a href="#"></a></p>
+						<p style="font-size: 15px;">Copyright &copy; PBSS - Designed by Team 03<a href="#"></a></p>
 					</div>
 					<div class="col-md-4">
 						<ul class="list-inline">
