--- a/PBSS/positivebehaviour/templates/positivebehaviour/index.html
+++ b/PBSS/positivebehaviour/templates/positivebehaviour/index.html
@@ -113,16 +113,14 @@
         <div class="container" >
                     <div class="row heading">
                         <div class="col-lg-12">
-                            <h2>View Profile</h2>
+                            <h2 style="color: black;">View Profile</h2>
                             <hr align="center">
 
                         </div>
                     </div>
         </div>
-
             <div class="col text-center" >
-
-                        <a class="btn btn-1 btn-sm" href="{% url 'profile' %}" style="margin-left: 1%;" >Profile</a>
+                        <a class="btn btn-3 btn-sm" href="{% url 'profile' %}" style="margin-left: 1%;" >Profile</a>
             </div>
 
 
