--- a/PBSS/contact/templates/contact.html
+++ b/PBSS/contact/templates/contact.html
@@ -1,5 +1,5 @@
 
-{%  extends "positivebehaviour/base.html" %}
+{%  extends "users/userbase.html" %}
 {% block content %}
         {% load static %}
 
@@ -7,6 +7,7 @@
                 <div class="container">
                     <div class="row heading">
                         <div class="col-lg-12">
+                            <a href="{% url 'index' %}"><i class="fa fa-arrow-circle-left" style="font-size:40px; border: none; float: left; color: blue;"></i></a>
                             <h2>Contact us</h2>
                             <hr>
                             <div class="intro">The support team is here to help, drop us a line.</div>
