--- a/PBSS/fbaform/templates/fbaform/fbaform.html
+++ b/PBSS/fbaform/templates/fbaform/fbaform.html
@@ -1,10 +1,94 @@
-{%  extends "fbaform/fbabase.html" %}
+{% extends "users/dashboardbase.html" %}
 {% block content %}
         {% load static %}
 
 
-    <div class="profile-form">
-            <form class="my-2 my-lg-0" method="POST">
+           <div class="page-wrapper chiller-theme toggled">
+  <a id="show-sidebar" class="btn btn-sm btn-dark" href="#">
+    <i class="fas fa-bars"></i>
+  </a>
+  <nav id="sidebar" class="sidebar-wrapper">
+    <div class="sidebar-content">
+      <div class="sidebar-brand">
+          <a class="navbar-brand page-scroll" style="font-size: 26px;" href="{% url 'index' %}">PBSS</a>
+      </div>
+        <div>
+                        {%  if messages %}
+                        {% for message in messages %}
+                        <div class="alert alert-{{ message.tags }}" style="text-align: center">
+                        {{ message }}
+                        </div>
+                        {% endfor %}
+                        {%  endif %}
+                        </div>
+      <div class="sidebar-header">
+        <div class="user-pic">
+          <img class="img-responsive img-rounded" src="{{ user.profile.image.url }}"
+            alt="User picture">
+        </div>
+
+
+
+        <div class="user-info">
+          <span class="user-name" style="margin-top: 6%; margin-bottom: 6%;">Hello, {{ user.username }}</span>
+            <span class="user-name" style="margin-top: 6%;">Mail ID:</span>  <span class="user-name" style="margin-top: 6%;">{{ user.email }}</span>
+        </div>
+      </div>
+
+
+      <!-- sidebar-search  -->
+      <div class="sidebar-menu">
+        <ul>
+          <li class="header-menu">
+            <span style="font-size: 24px; margin-top: 4%; margin-bottom: 4%;">General</span>
+          </li>
+             <li class="sidebar-dropdown">
+           <a href="{% url 'profile' %}">
+              <span>Home</span>
+            </a>
+          </li>
+          <li class="sidebar-dropdown">
+           <a href="{% url 'edit_profile' %}">
+              <span>Edit Profile</span>
+            </a>
+          </li>
+          <li class="sidebar-dropdown">
+            <a href="{% url 'fbaform' %}" >
+              <span>BR Report</span>
+            </a>
+          </li>
+          <li class="sidebar-dropdown">
+            <a href="{% url 'fbaform' %}" >
+              <span>FBA form</span>
+            </a>
+          </li>
+            <li class="sidebar-dropdown">
+            <a href="{% url 'logout' %}" >
+              <span>Logout</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <!-- sidebar-menu  -->
+    </div>
+
+  </nav>
+  <!-- sidebar-wrapper  -->
+  <main class="page-content">
+    <div class="container">
+       <h2 style="text-align: center;">Dashboard</h2>
+        <hr>
+      <div class="row">
+        <div class="form-group col-md-12">
+          <p style="text-align: center;">Manage work on daily basis.</p>
+        </div>
+      </div>
+        <div class="container">
+                    <div class="row heading">
+                        <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
+                               <p style="margin-bottom: 3%;"><a href="{% url 'profile' %}">Home</a> > <a href="{% url 'fbaform' %}"> FBA Form</a></p>
+                            <div class="profile-form" style= "margin: 0%;">
+                             <form class="my-2 my-lg-0" method="POST">
                 {% csrf_token %}
                 <h3 class="text-center">BR Report</h3><br>
 
@@ -49,99 +133,9 @@
                         <button class="btn btn-3 btn-sm" onclick="myFunction()" name="print" id="print" style="float: right;">Print</button>
 
                 </fieldset></form>
-    </div>
-
-
-
-
-    <div class="profile-form">
-				<div class="row">
-					<div class="col-md-4 col-footer footer-1">
-						<div class="content">
-                            <div class="profile-form">
-
-            <form class="my-2 my-lg-0" method="POST">
-                {% csrf_token %}
-                <h3 class="text-center">Test 1</h3><br>
-                <fieldset class="form-group">
-                <div class="row">
-                    <input type="text" class="form-control input-lg" name="item" id="b1" placeholder="Enter test" required="required" />
-                    <button type="submit" class="btn btn-3 btn-block" name="btnadd" id="btnadd">Add</button>        <br>
-                {%  if messages %}
-                {%  for message in messages %}
-                    <div class = "alert alert-warning alert-dismissable" role="alert">
-                        <button class="close" data-dismiss="alert">
-                            <small><sup>x</sup></small>
-                        </button>
-                    </div>
-                {% endfor %}
-                {% endif %}
-            {% if all_items %}
-                 <table class="table table-bothered">
-                {% for things in all_items %}
-                    {% if things.completed %}
-                        <tr class="table-secondary">
-                            <td><a href="{% url 'edit' things.id %}">{{ things.item }}</a></td>
-                          <td><a href="{% url 'delete' things.id %}">Delete</a></td>
-                        </tr>
-                    {% else %}
-                        <tr>
-                            <td><a href="{% url 'edit' things.id %}">{{ things.item }}</a></td>
-                        <td><a href="{% url 'delete' things.id %}">Delete</a></td>
-                        </tr>
-                    {% endif %}
-            {% endfor %}
-                </table>
-            {% endif %}
-                </div>
-                </fieldset></form>
-                </div>
                         </div>
-					</div>
-
-<!-- ============================================================================================================== -->
-
-                    <div class="col-md-4 col-footer footer-2">
-						<div class="content">
-                            <div class="profile-form">
-                    <form class="my-2 my-lg-0" method="POST">
-                    {% csrf_token %}
-                        <h3 class="text-center">Test 2</h3><br>
-                    <fieldset class="form-group">
-                    <div class="row">
-                        <input type="text" class="form-control input-lg" name="anticident" id="name" placeholder="Enter Test 2" required="required" />
-                        <button type="submit" class="btn btn-3 btn-block" name="btnadd" id="btnadd">Add</button> <br>
                     </div>
-                        {%  if messages %}
-                {%  for message in messages %}
-                    <div class = "alert alert-warning alert-dismissable" role="alert">
-                        <button class="close" data-dismiss="alert">
-                            <small><sup>x</sup></small>
-                        </button>
-                    </div>
-                {% endfor %}
-                {% endif %}
-                     </fieldset></form>
-                            </div>
-						</div>
-					</div>
-
-<!-- ============================================================================================ -->
-
-                    <div class="col-md-4 col-footer footer-3">
-                        <div class="profile-form">
-            <form class="my-2 my-lg-0" method="POST">
-
-                <h3 class="text-center">Test 3</h3><br>
-                <fieldset class="form-group">
-
-                </fieldset></form>
-                </div>
-                        </div>
-				</div>
-			</div>
-
-    </div>
-
-
+                    </div></div></div>
+       </main>
+           </div>
 {% endblock content %}
