--- a/PBSS/users/templates/users/edit_profile.html
+++ b/PBSS/users/templates/users/edit_profile.html
@@ -119,6 +119,7 @@
              <div class="container">
                     <div class="row heading">
                         <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
+                            <p style="margin-bottom: 3%;"><a href="{% url 'profile' %}">Home</a> > <a href="{% url 'edit_profile' %}"> Edit Profile</a></p>
                             <h4>Edit Profile</h4>
                         </div>
                     </div>
