--- a/PBSS/users/templates/users/profile.html
+++ b/PBSS/users/templates/users/profile.html
@@ -114,6 +114,13 @@
           <p style="text-align: center;">Manage work on daily basis.</p>
         </div>
       </div>
+         <div class="container">
+                    <div class="row heading">
+                        <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
+                            <p style="margin-bottom: 3%;"><a href="{% url 'profile' %}">Home</a></p>
+                            <h4>Heading</h4>
+                        </div>
+                    </div>
         <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
     </div>
@@ -143,7 +150,7 @@
 
 
     </div>
-    </div></main>
+         </div></div></main>
         </div>
         </div>
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
