--- a/PBSS/users/templates/users/register.html
+++ b/PBSS/users/templates/users/register.html
@@ -9,8 +9,9 @@
                 <div class="container">
                     <div class="row heading">
                         <div class="col-lg-12">
+                            <a href="{% url 'index' %}"><i class="fa fa-arrow-circle-left" style="font-size:40px; border: none; float: left; color: blue;"></i></a>
                             <h2>Sign up</h2>
-                            <hr>
+                            <hr style="margin-left: 46%;">
                             <div class="intro">Be a part of positive behaviour support.</div>
                         </div>
                     </div>
