--- a/PBSS/positivebehaviour/templates/positivebehaviour/index.html
+++ b/PBSS/positivebehaviour/templates/positivebehaviour/index.html
@@ -31,7 +31,8 @@
                             {% endfor %}
                         {%  endif %}
                      </div>
-                    <div class="row heading">
+                     <div class="col-md-8">
+                       <div class="row heading">
                         <div class="col-lg-12">
                             <h2>About us</h2>
                             <hr>
