--- a/PBSS/users/templates/users/client.html
+++ b/PBSS/users/templates/users/client.html
@@ -1,66 +1,106 @@
-
-{%  extends "users/userbase.html" %}
+{%  extends "users/dashboardbase.html" %}
+{% load crispy_forms_tags %}
 {% block content %}
-        {% load static %}
-        {% load crispy_forms_tags %}
-<nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand page-scroll" href="{% url 'index' %}">PBSS</a>
-            </div>
+{% load static %}
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="hidden">
-                        <a href="#page-top"></a>
-                    </li>
-					<li>
-                        <a class="page-scroll" href="{% url 'index' %}">Home</a>
-                    </li>
-                    <li>
-                         {% if user.is_authenticated %}
-                     <li>
-                                 <a class="page-scroll" href="{% url 'client-create' %}">New Client</a>
-                             </li>
-                             <li>
-                                 <a class="page-scroll" href="{% url 'profile' %}">Profile</a>
-                             </li>
-                             <li>
-                                 <a class="page-scroll" href="{% url 'logout' %}">Logout</a>
-                             </li>
-                     </li>
-                             <li>
 
-                         {% else %}
-                            <a class="page-scroll" href="#portal">Signup</a>
+  <div class="page-wrapper chiller-theme toggled">
+  <a id="show-sidebar" class="btn btn-sm btn-dark" href="#">
+    <i class="fas fa-bars"></i>
+  </a>
+  <nav id="sidebar" class="sidebar-wrapper">
+    <div class="sidebar-content">
+      <div class="sidebar-brand">
+          <a class="navbar-brand page-scroll" style="font-size: 26px;" href="{% url 'index' %}">PBSS</a>
+      </div>
+        <div>
+                        {%  if messages %}
+                        {% for message in messages %}
+                        <div class="alert alert-{{ message.tags }}" style="text-align: center">
+                        {{ message }}
+                        </div>
+                        {% endfor %}
+                        {%  endif %}
+                        </div>
+      <div class="sidebar-header">
+        <div class="user-pic">
+          <img class="img-responsive img-rounded" src="{{ user.profile.image.url }}"
+            alt="User picture">
+        </div>
+
+
+
+        <div class="user-info">
+          <span class="user-name" style="margin-top: 6%; margin-bottom: 6%;">Hello, {{ user.username }}</span>
+            <span class="user-name" style="margin-top: 6%;">Mail ID:</span>  <span class="user-name" style="margin-top: 6%;">{{ user.email }}</span>
+        </div>
+      </div>
+
+
+      <!-- sidebar-search  -->
+      <div class="sidebar-menu">
+        <ul>
+          <li class="header-menu">
+            <span style="font-size: 24px; margin-top: 4%; margin-bottom: 4%;">General</span>
+          </li>
+             <li class="sidebar-dropdown">
+           <a href="{% url 'profile' %}">
+              <span>Home</span>
+            </a>
+          </li>
+          <li class="sidebar-dropdown">
+           <a href="{% url 'edit_profile' %}">
+              <span>Edit Profile</span>
+            </a>
+          </li>
+          <li class="sidebar-dropdown">
+            <a href="{% url 'fbaform' %}" >
+              <span>BR Report</span>
+            </a>
+          </li>
+          <li class="sidebar-dropdown">
+            <a href="{% url 'fbaform' %}" >
+              <span>FBA form</span>
+            </a>
+          </li>
+            <li class="sidebar-dropdown">
+            <a href="{% url 'logout' %}" >
+              <span>Logout</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <!-- sidebar-menu  -->
+    </div>
+
+  </nav>
+  <!-- sidebar-wrapper  -->
+  <main class="page-content">
+    <div class="container-fluid">
+       <h2 style="text-align: center;">Dashboard</h2>
+        <hr>
+      <div class="row">
+        <div class="form-group col-md-12">
+          <p style="text-align: center;">Manage work on daily basis.</p>
+        </div>
+      </div>
+         <div class="container">
+                    <div class="row heading">
+                        <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
+                            <p style="margin-bottom: 3%;"><a href="{% url 'profile' %}">Home</a></p>
+                            <h4>Heading</h4>
+                             {% if user.is_authenticated %}
+                              <a class="btn btn-3 btn-sm" href="{% url 'client' %}" style="margin-left: 1%;" >Client List</a>
+                                 <a class="btn btn-3 btn-sm" href="{% url 'client-create' %}" style="margin-left: 1%;" >Add A new client</a>
+                            {% else %}
+                            <a class="page-scroll" href="#portal">login</a>
                         </li>
                          {% endif %}
-
-                        <li>
-                            <a class="page-scroll" href="{% url 'contact' %}">Contact us</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container-fluid -->
-    </nav>
-
-
-     <div id="page-content" class="index-page">
-            <section id="" class="box-content box-1" style="background: white; margin-top: 3%;">
-                <div class="container">
-                    <div class="row heading">
-                        <div class="col-lg-12">
-                            <h2>Client Details</h2>
+                        </div>
+                    </div>
+        <div class="row">
+        <div class="col-sm-12">
+             <h2>Client Details</h2>
                             <hr>
                             <div class="intro">Be a part of positive behaviour support.</div>
                         </div>
@@ -74,7 +114,13 @@
                 {% endfor %}
                         </div>
                 </div>
-            </section>
-     </div>
+        </div>
+  </main>
+  <!-- page-content" -->
+</div>
 
 {% endblock content %}
+
+
+
+
